v1.0.4/_sources/chapters/all_driver.md.txt
# List of 75 Drivers in Jina

This version of Jina includes 75 Drivers.

## Inheritances in a Tree View
- `JAMLCompatible`
   - `BaseDriver`
      - `BaseRecursiveDriver`
         - `BaseExecutableDriver`
            - `RecursiveMixin`
               - `BaseEvaluateDriver`
                  - `FieldEvaluateDriver`
                     - `NDArrayEvaluateDriver`
                     - `TextEvaluateDriver`
                  - `RankEvaluateDriver`
               - `BaseRankDriver`
                  - `BaseAggregateMatchesRankerDriver`
                     - `AggregateMatches2DocRankDriver`
                     - `Chunk2DocRankDriver`
                  - `Matches2DocRankDriver`
            - `BaseSearchDriver`
               - `RecursiveMixin`
                  - `KVSearchDriver`
                     - `LoadGroundTruthDriver`
               - `QuerySetReader`
                  - `RecursiveMixin`
                     - `VectorFillDriver`
                  - `FastRecursiveMixin`
                     - `VectorSearchDriver`
            - `FastRecursiveMixin`
               - `BasePredictDriver`
                  - `BaseLabelPredictDriver`
                     - `BinaryPredictDriver`
                     - `OneHotPredictDriver`
                        - `MultiLabelPredictDriver`
                  - `Prediction2DocBlobDriver`
               - `BaseIndexDriver`
                  - `BaseCacheDriver`
                     - `TaggingCacheDriver`
                  - `KVIndexDriver`
                  - `VectorIndexDriver`
               - `CraftDriver`
               - `SegmentDriver`
            - `BaseEncodeDriver`
               - `FastRecursiveMixin`
                  - `MultiModalDriver`
                  - `EncodeDriver`
               - `RecursiveMixin`
                  - `LegacyEncodeDriver`
            - `DeleteDriver`
         - `RecursiveMixin`
            - `ConvertDriver`
               - `Blob2PngURI`
               - `Buffer2URI`
               - `BufferImage2Blob`
               - `DataURI2Blob`
               - `Text2URI`
               - `URI2Blob`
               - `URI2Buffer`
               - `URI2DataURI`
               - `URI2Text`
            - `QuerySetReader`
               - `SortQL`
               - `SliceQL`
               - `ExcludeQL`
                  - `ExcludeReqQL`
                     - `SelectReqQL`
                  - `SelectQL`
               - `FilterQL`
               - `ReverseQL`
            - `ReduceAllDriver`
               - `CollectEvaluationDriver`
               - `ConcatEmbedDriver`
      - `BaseControlDriver`
         - `ControlReqDriver`
            - `RouteDriver`
               - `ForwardDriver`
               - `ReduceDriver`
         - `LogInfoDriver`
         - `WaitDriver`

## Modules in a Table View 

| Class | Module |
| --- | --- |
| `AggregateMatches2DocRankDriver` | `jina.drivers.rank.aggregate` |
| `BaseAggregateMatchesRankerDriver` | `jina.drivers.rank` |
| `BaseCacheDriver` | `jina.drivers.index` |
| `BaseControlDriver` | `jina.drivers.control` |
| `BaseDriver` |   |
| `BaseEncodeDriver` | `jina.drivers.segment` |
| `BaseEvaluateDriver` |   |
| `BaseExecutableDriver` | `jina.drivers.reduce` |
| `BaseIndexDriver` |   |
| `BaseLabelPredictDriver` | `jina.drivers.predict` |
| `BasePredictDriver` |   |
| `BaseRankDriver` |   |
| `BaseRecursiveDriver` | `jina.drivers.control` |
| `BaseSearchDriver` | `jina.drivers.segment` |
| `BinaryPredictDriver` | `jina.drivers.predict` |
| `Blob2PngURI` | `jina.drivers.convertdriver` |
| `Buffer2URI` | `jina.drivers.convertdriver` |
| `BufferImage2Blob` | `jina.drivers.convertdriver` |
| `Chunk2DocRankDriver` | `jina.drivers.rank.aggregate` |
| `CollectEvaluationDriver` | `jina.drivers.reduce` |
| `ConcatEmbedDriver` | `jina.drivers.reduce` |
| `ControlReqDriver` | `jina.drivers.control` |
| `ConvertDriver` |   |
| `CraftDriver` |   |
| `DataURI2Blob` | `jina.drivers.convertdriver` |
| `DeleteDriver` | `jina.drivers.segment` |
| `EncodeDriver` |   |
| `ExcludeQL` |   |
| `ExcludeReqQL` | `jina.drivers.querylang.select` |
| `FastRecursiveMixin` |   |
| `FastRecursiveMixin` | `jina.drivers.encode` |
| `FastRecursiveMixin` | `jina.drivers.segment` |
| `FieldEvaluateDriver` | `jina.drivers.evaluate` |
| `FilterQL` |   |
| `ForwardDriver` | `jina.drivers.control` |
| `JAMLCompatible` |   |
| `KVIndexDriver` | `jina.drivers.index` |
| `KVSearchDriver` |   |
| `LegacyEncodeDriver` |   |
| `LoadGroundTruthDriver` | `jina.drivers.search` |
| `LogInfoDriver` | `jina.drivers.control` |
| `Matches2DocRankDriver` | `jina.drivers.rank` |
| `MultiLabelPredictDriver` | `jina.drivers.predict` |
| `MultiModalDriver` |   |
| `NDArrayEvaluateDriver` | `jina.drivers.evaluate` |
| `OneHotPredictDriver` | `jina.drivers.predict` |
| `Prediction2DocBlobDriver` | `jina.drivers.predict` |
| `QuerySetReader` |   |
| `QuerySetReader` | `jina.drivers.search` |
| `RankEvaluateDriver` | `jina.drivers.evaluate` |
| `RecursiveMixin` |   |
| `RecursiveMixin` | `jina.drivers.encode` |
| `RecursiveMixin` | `jina.drivers.reduce` |
| `RecursiveMixin` | `jina.drivers.search` |
| `RecursiveMixin` | `jina.drivers.segment` |
| `ReduceAllDriver` |   |
| `ReduceDriver` | `jina.drivers.control` |
| `ReverseQL` |   |
| `RouteDriver` | `jina.drivers.control` |
| `SegmentDriver` |   |
| `SelectQL` | `jina.drivers.querylang.select` |
| `SelectReqQL` | `jina.drivers.querylang.select` |
| `SliceQL` |   |
| `SortQL` |   |
| `TaggingCacheDriver` | `jina.drivers.cache` |
| `Text2URI` | `jina.drivers.convertdriver` |
| `TextEvaluateDriver` | `jina.drivers.evaluate` |
| `URI2Blob` | `jina.drivers.convertdriver` |
| `URI2Buffer` | `jina.drivers.convertdriver` |
| `URI2DataURI` | `jina.drivers.convertdriver` |
| `URI2Text` | `jina.drivers.convertdriver` |
| `VectorFillDriver` |   |
| `VectorIndexDriver` | `jina.drivers.index` |
| `VectorSearchDriver` |   |
| `WaitDriver` | `jina.drivers.control` |