v1.1.8/_sources/chapters/all_driver.md.txt
# List of 78 Drivers in Jina

This version of Jina includes 78 Drivers.

## Inheritances in a Tree View
- `JAMLCompatible`
   - `BaseDriver`
      - `BaseRecursiveDriver`
         - `ContextAwareRecursiveMixin`
            - `QuerySetReader`
               - `SortQL`
               - `SliceQL`
               - `FilterQL`
               - `ReverseQL`
            - `ReduceAllDriver`
         - `BaseExecutableDriver`
            - `FlatRecursiveMixin`
               - `DocsExtractUpdateMixin`
                  - `CraftDriver`
                  - `GenericExecutorDriver`
                  - `SegmentDriver`
                  - `BasePredictDriver`
                     - `BaseLabelPredictDriver`
                        - `BinaryPredictDriver`
                        - `OneHotPredictDriver`
                           - `MultiLabelPredictDriver`
                     - `Prediction2DocBlobDriver`
               - `BaseIndexDriver`
                  - `DBMSIndexDriver`
                  - `KVIndexDriver`
                  - `VectorIndexDriver`
                  - `BaseCacheDriver`
                     - `TaggingCacheDriver`
               - `BaseRankDriver`
                  - `BaseAggregateMatchesRankerDriver`
                     - `AggregateMatches2DocRankDriver`
                     - `Chunk2DocRankDriver`
                  - `Matches2DocRankDriver`
            - `DumpDriver`
            - `BaseEncodeDriver`
               - `FlatRecursiveMixin`
                  - `MultiModalDriver`
                  - `DocsExtractUpdateMixin`
                     - `EncodeDriver`
                     - `ScipySparseEncodeDriver`
            - `DeleteDriver`
            - `BaseSearchDriver`
               - `ContextAwareRecursiveMixin`
                  - `KVSearchDriver`
                     - `LoadGroundTruthDriver`
               - `QuerySetReader`
                  - `FlatRecursiveMixin`
                     - `VectorFillDriver`
                     - `VectorSearchDriver`
            - `BaseEvaluateDriver`
               - `FieldEvaluateDriver`
                  - `NDArrayEvaluateDriver`
                  - `TextEvaluateDriver`
               - `RankEvaluateDriver`
         - `FlatRecursiveMixin`
            - `CollectEvaluationDriver`
            - `QuerySetReader`
               - `ExcludeQL`
                  - `ExcludeReqQL`
                     - `SelectReqQL`
                  - `SelectQL`
            - `ConvertDriver`
               - `Blob2PngURI`
               - `Buffer2URI`
               - `BufferImage2Blob`
               - `DataURI2Blob`
               - `Text2URI`
               - `URI2Blob`
               - `URI2Buffer`
               - `URI2DataURI`
               - `URI2Text`
            - `PngToDiskDriver`
         - `ConcatEmbedDriver`
      - `BaseControlDriver`
         - `ControlReqDriver`
            - `RouteDriver`
               - `ForwardDriver`
         - `LogInfoDriver`
         - `WaitDriver`
         - `WhooshDriver`

## Modules in a Table View 

| Class | Module |
| --- | --- |
| `AggregateMatches2DocRankDriver` | `jina.drivers.rank.aggregate` |
| `BaseAggregateMatchesRankerDriver` | `jina.drivers.rank` |
| `BaseCacheDriver` | `jina.drivers.cache` |
| `BaseControlDriver` | `jina.drivers.control` |
| `BaseDriver` |   |
| `BaseEncodeDriver` | `jina.drivers.rank` |
| `BaseEvaluateDriver` | `jina.drivers.rank` |
| `BaseExecutableDriver` | `jina.drivers.debug` |
| `BaseIndexDriver` |   |
| `BaseLabelPredictDriver` | `jina.drivers.predict` |
| `BasePredictDriver` |   |
| `BaseRankDriver` |   |
| `BaseRecursiveDriver` | `jina.drivers.control` |
| `BaseSearchDriver` | `jina.drivers.rank` |
| `BinaryPredictDriver` | `jina.drivers.predict` |
| `Blob2PngURI` | `jina.drivers.convert` |
| `Buffer2URI` | `jina.drivers.convert` |
| `BufferImage2Blob` | `jina.drivers.convert` |
| `Chunk2DocRankDriver` | `jina.drivers.rank.aggregate` |
| `CollectEvaluationDriver` |   |
| `ConcatEmbedDriver` | `jina.drivers.debug` |
| `ContextAwareRecursiveMixin` | `jina.drivers.debug` |
| `ContextAwareRecursiveMixin` | `jina.drivers.search` |
| `ControlReqDriver` | `jina.drivers.control` |
| `ConvertDriver` |   |
| `CraftDriver` |   |
| `DBMSIndexDriver` | `jina.drivers.cache` |
| `DataURI2Blob` | `jina.drivers.convert` |
| `DeleteDriver` | `jina.drivers.rank` |
| `DocsExtractUpdateMixin` |   |
| `DumpDriver` | `jina.drivers.rank` |
| `EncodeDriver` |   |
| `ExcludeQL` |   |
| `ExcludeReqQL` | `jina.drivers.querylang.select` |
| `FieldEvaluateDriver` | `jina.drivers.evaluate` |
| `FilterQL` |   |
| `FlatRecursiveMixin` |   |
| `FlatRecursiveMixin` | `jina.drivers.debug` |
| `FlatRecursiveMixin` | `jina.drivers.encode` |
| `FlatRecursiveMixin` | `jina.drivers.rank` |
| `ForwardDriver` | `jina.drivers.control` |
| `GenericExecutorDriver` |   |
| `JAMLCompatible` |   |
| `KVIndexDriver` | `jina.drivers.cache` |
| `KVSearchDriver` |   |
| `LoadGroundTruthDriver` | `jina.drivers.evaluate` |
| `LogInfoDriver` | `jina.drivers.control` |
| `Matches2DocRankDriver` | `jina.drivers.rank` |
| `MultiLabelPredictDriver` | `jina.drivers.predict` |
| `MultiModalDriver` |   |
| `NDArrayEvaluateDriver` | `jina.drivers.evaluate` |
| `OneHotPredictDriver` | `jina.drivers.predict` |
| `PngToDiskDriver` |   |
| `Prediction2DocBlobDriver` | `jina.drivers.predict` |
| `QuerySetReader` |   |
| `QuerySetReader` | `jina.drivers.search` |
| `RankEvaluateDriver` | `jina.drivers.evaluate` |
| `ReduceAllDriver` |   |
| `ReverseQL` |   |
| `RouteDriver` | `jina.drivers.control` |
| `ScipySparseEncodeDriver` |   |
| `SegmentDriver` |   |
| `SelectQL` | `jina.drivers.querylang.select` |
| `SelectReqQL` | `jina.drivers.querylang.select` |
| `SliceQL` |   |
| `SortQL` |   |
| `TaggingCacheDriver` | `jina.drivers.cache` |
| `Text2URI` | `jina.drivers.convert` |
| `TextEvaluateDriver` | `jina.drivers.evaluate` |
| `URI2Blob` | `jina.drivers.convert` |
| `URI2Buffer` | `jina.drivers.convert` |
| `URI2DataURI` | `jina.drivers.convert` |
| `URI2Text` | `jina.drivers.convert` |
| `VectorFillDriver` |   |
| `VectorIndexDriver` | `jina.drivers.cache` |
| `VectorSearchDriver` |   |
| `WaitDriver` | `jina.drivers.control` |
| `WhooshDriver` | `jina.drivers.control` |